<resources>
    <string name="app_name">Inuapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="wishlist">Wishlist</string>
    <string name="notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_rider_map">Map</string>
    <string name="new_product">New Product</string>
    <string name="add_products">Add Products</string>
    <string name="employees">Employees</string>
    <string name="orders">Orders</string>
    <string name="updates">Updates</string>
    <string name="logs">Logs</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="jobs">Jobs</string>
    <string name="history">History</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="number">Number of Items</string>
    <string name="price">Price</string>
    <string name="product_name">Product Name</string>
    <string name="to_be_filled">-</string>
    <string name="confirm">Confirm</string>
    <string name="total">TOTAL</string>

    <string name="electronics">Electronics</string>
    <style name="home">Home</style>
    <string name="gaming">Gaming</string>
    <string name="fashion">Fashion</string>
    <string name="computing">Computing</string>
    <string name="sporting">Sporting</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
</resources>