<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/wishlist"
        android:icon="@drawable/ic_wishlist_"
        app:showAsAction="always"
        android:title="@string/wishlist"/>

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart_"
        app:showAsAction="always"
        android:title="@string/cart"/>

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.SearchView"
        tools:targetApi="o" />

    <item
        android:id="@+id/logout_button"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>