<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.addProducts.AddToMarket">

    <androidx.appcompat.widget.Toolbar
        android:background="@color/greenPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="Category"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/categoryGroup"
                android:padding="5dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/electronicRadio"
                    android:text="@string/electronics"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"/>

                <RadioButton
                    android:id="@+id/homeRadio"
                    android:text="@string/home"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"/>

                <RadioButton
                    android:id="@+id/gamingRadio"
                    android:text="@string/gaming"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"/>

                <RadioButton
                    android:id="@+id/fashionRadio"
                    android:text="@string/fashion"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"/>


                <RadioButton
                    android:id="@+id/computingRadio"
                    android:text="@string/computing"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"/>


                <RadioButton
                    android:id="@+id/sportingRadio"
                    android:text="@string/sporting"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"/>

            </RadioGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productMarketRv"
                android:layout_gravity="center"
                android:padding="15dp"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="Units"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/unitEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:inputType="numberDecimal"
                android:gravity="center_vertical"
                android:hint="Units" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="Price per unit"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/priceEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:hint="Price of product" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="Description"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/descriptionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:hint="Description of product" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/addToMarketButton"
        android:text="Post"
        android:layout_gravity="center"
        android:background="@color/greenPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>