<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.explore.ExploreFragment">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:orientation="vertical">

       <LinearLayout
           android:padding="5dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <Spinner
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:background="@color/semiBlack"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:padding="5dp"
               android:textColor="@color/black"
               android:text="@string/electronics"
               android:textStyle="bold"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_gravity="center"
               android:background="@color/semiBlack"/>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/electronicsRv"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp"
               android:padding="5dp"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:padding="5dp"
               android:textColor="@color/black"
               android:text="Home"
               android:textStyle="bold"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_gravity="center"
               android:background="@color/semiBlack"/>

           <GridView
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:layout_gravity="center"
               android:padding="5dp"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:padding="5dp"
               android:textColor="@color/black"
               android:text="@string/gaming"
               android:textStyle="bold"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_gravity="center"
               android:background="@color/semiBlack"/>

           <GridView
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:layout_gravity="center"
               android:padding="5dp"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:padding="5dp"
               android:textColor="@color/black"
               android:text="@string/fashion"
               android:textStyle="bold"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_gravity="center"
               android:background="@color/semiBlack"/>

           <GridView
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:layout_gravity="center"
               android:padding="5dp"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:padding="5dp"
               android:textColor="@color/black"
               android:text="@string/computing"
               android:textStyle="bold"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_gravity="center"
               android:background="@color/semiBlack"/>

           <GridView
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:layout_gravity="center"
               android:padding="5dp"/>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:padding="5dp"
               android:textColor="@color/black"
               android:text="@string/sporting"
               android:textStyle="bold"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_gravity="center"
               android:background="@color/semiBlack"/>

           <GridView
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:layout_gravity="center"
               android:padding="5dp"/>

       </LinearLayout>

   </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>